# agent-atlas

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  TESTING.md  prd.md  roadmap.md
apps/control-plane/: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  EXECUTION_ARCHITECTURE.md  Makefile  PLATFORM_MODULES.md  README.md  bandit-baseline.json  pyproject.toml
apps/control-plane/app/: main.py  worker.py
apps/control-plane/app/agent_plugins/: __init__.py  basic.py  customer_service.py  fulfillment_ops.py  tools.py
apps/control-plane/app/agent_tracing/: __init__.py  contracts.py  ports.py
apps/control-plane/app/bootstrap/: __init__.py  container.py  jobs.py  seed.py  worker.py
apps/control-plane/app/core/: config.py  errors.py
apps/control-plane/app/data_plane/: __init__.py
apps/control-plane/app/db/: persistence.py  state.py
apps/control-plane/app/execution/: __init__.py  contracts.py  metadata.py  runner_process.py  service.py
apps/control-plane/app/execution_plane/: __init__.py  control.py  runner.py  service.py  specs.py
apps/control-plane/app/infrastructure/: storage.py
apps/control-plane/app/modules/: __init__.py
apps/control-plane/app/tracing/: __init__.py
apps/control-plane/datasets/: claude-code-code-edit-v1.jsonl  fulfillment-eval-v1.jsonl
apps/control-plane/scripts/: generate_frontend_contract.py
apps/control-plane/tests/: conftest.py  test_health.py
apps/control-plane/tests/e2e/: test_live_smoke.py
apps/control-plane/tests/integration/: test_agents_api.py  test_api_contracts.py  test_datasets_api.py  test_experiments_api.py  test_exports_api.py
apps/control-plane/tests/support/: fake_docker.py  fake_k8s.py  fake_phoenix.py
apps/control-plane/tests/unit/: test_adapter_manager.py  test_agent_intake_use_cases.py  test_agent_plugins.py  test_architecture_layers.py  test_evals.py  test_execution_control.py  test_execution_jobs.py  test_execution_launchers.py  test_execution_plane_contracts.py  test_execution_target_http_schemas.py  test_experiment_orchestrator.py  test_experiment_run_query.py  test_frontend_api_contract.py  test_fulfillment_ops.py  test_model_runtime.py  test_openai_agents_trace_mapper.py  test_phoenix_adapter.py  test_reference_assets.py  test_run_execution_components.py  test_run_submission_service.py  test_runner_artifact_resolution.py  test_runner_base_outputs.py  test_runtime_package_boundaries.py  test_settings.py  test_starter_assets.py  test_state_store_feature_ownership.py  test_storage_ownership.py  test_trace_workflow_and_architecture.py
backend/: .agent-atlas-local0.db  .agent-atlas-local0.db-shm  .agent-atlas-local0.db-wal  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Makefile  PLATFORM_MODULES.md  README.md  pyproject.toml
backend/app/: agent_registry.py  main.py  worker.py
backend/app/agent_plugins/: basic.py  customer_service.py  fulfillment_ops.py  tools.py
backend/app/api/routes/: __init__.py  adapters.py  agents.py  artifacts.py  datasets.py  eval.py  evals.py  experiments.py  exports.py  policies.py  replays.py  runs.py  traces.py
backend/app/bootstrap/: __init__.py  bundles.py  container.py  seed.py  worker.py
backend/app/bootstrap/providers/: __init__.py  artifacts.py  evals.py  exports.py  runs.py  traces.py
backend/app/bootstrap/wiring/: agents.py  artifacts.py  datasets.py  evals.py  experiments.py  health.py  infrastructure.py  runs.py  traces.py  worker.py
backend/app/core/: config.py  errors.py
backend/app/db/: persistence.py  state.py  store.py
backend/app/execution_plane/: __init__.py  contracts.py  translation.py
backend/app/execution_plane/launchers/: __init__.py  k8s.py  local.py
backend/app/infrastructure/adapters/: agent_catalog.py  agents.py  artifact_builder.py  artifacts.py  docker_runtime.py  evals.py  framework_registry.py  model_runtime.py  openai_agents_trace_mapper.py  phoenix.py  runner.py  runtime.py  tasks.py  trace_backend.py  traces.py  trajectory_projection.py
backend/app/infrastructure/repositories/: __init__.py  agents.py  artifacts.py  common.py  datasets.py  evals.py  runs.py  system.py
backend/app/models/: schemas.py
backend/app/modules/adapters/: __init__.py
backend/app/modules/agents/: __init__.py
backend/app/registered_agents/: __init__.py  basic.py  context.py  customer_service.py  tools.py
backend/app/services/: adapter.py  datasets.py  eval_service.py  exporter.py  model_runtime.py  orchestrator.py  replay.py  runner.py  scheduler.py  seed.py  trace.py
backend/scripts/: generate_frontend_contract.py
backend/tests/: conftest.py  test_runs_api.py  test_services.py
backend/tests/e2e/: test_full_flow.py  test_live_smoke.py  test_negative_flow.py
backend/tests/integration/: test_api_contracts.py  test_artifact_export_jsonl.py  test_artifact_export_parquet.py  test_error_paths.py  test_evals_api.py  test_exports_api.py  test_replay_and_eval_api.py
backend/tests/support/: fake_phoenix.py
backend/tests/unit/: test_adapter_manager.py  test_agent_plugins.py  test_architecture_layers.py  test_docker_runtime.py  test_evals.py  test_execution_control.py  test_execution_launchers.py  test_execution_plane_contracts.py  test_frontend_api_contract.py  test_fulfillment_ops.py  test_model_runtime.py  test_openai_agents_trace_mapper.py  test_phoenix_adapter.py  test_replay_and_eval_components.py  test_run_execution_components.py  test_run_submission_service.py  test_runner.py  test_runner_artifact_resolution.py  test_trace_workflow_and_architecture.py
runtimes/runner-base/: README.md  pyproject.toml
runtimes/runner-base/tests/: test_execution_profile.py  test_outputs.py
runtimes/runner-base/validation/: Dockerfile  README.md  run_validation.py
runtimes/runner-langgraph/: README.md  pyproject.toml
runtimes/runner-langgraph/tests/: test_runtime_plugins.py  test_trace_mapper.py
runtimes/runner-openai-agents/: README.md  pyproject.toml
runtimes/runner-openai-agents/tests/: test_runtime_plugins.py  test_trace_mapper.py
(+614 files in other folders)
