[project]
name = "agent-atlas-backend"
version = "0.1.0"
description = "Backend service for Agent Atlas."
requires-python = ">=3.12"
dependencies = [
  "agent-atlas-contracts",
  "agent-atlas-runner-base",
  "agent-atlas-runner-langgraph",
  "agent-atlas-runner-openai-agents",
  "fastapi>=0.115,<0.116",
  "pydantic>=2.10,<2.11",
  "pydantic-settings>=2.8,<2.9",
  "uvicorn[standard]>=0.34,<0.35",
  "python-dateutil>=2.9,<2.10",
  "httpx[socks]>=0.28,<0.29",
  "psycopg[binary]>=3.2,<3.3",
  "arq>=0.27,<0.28",
  "arize-phoenix-client>=1.14.0,<2",
  "arize-phoenix-otel>=0.13.0,<0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<8.5",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<0.9",
  "mypy>=1.15,<1.16",
  "bandit>=1.8,<1.9",
  "pre-commit>=4.0,<5.0",
  "httpx>=0.28,<0.29",
]
export = [
  "pyarrow>=16,<17",
  "pandas>=2.2,<2.3",
]

[build-system]
requires = ["setuptools>=70.0,<71.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv.sources]
agent-atlas-contracts = { path = "../../packages/contracts/python", editable = true }
agent-atlas-runner-base = { path = "../../runtimes/runner-base", editable = true }
agent-atlas-runner-langgraph = { path = "../../runtimes/runner-langgraph", editable = true }
agent-atlas-runner-openai-agents = { path = "../../runtimes/runner-openai-agents", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
  ".venv",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  "node_modules",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "SIM",
  "UP",
  "RUF",
]
ignore = [
  "D203",
  "D212",
]
fixable = [
  "E",
  "F",
  "I",
  "B",
  "SIM",
  "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
  "-q",
  "--strict-config",
  "--strict-markers",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=xml:coverage.xml",
  "--cov-fail-under=70",
]
testpaths = ["tests"]
markers = [
  "unit: fast isolated tests for pure services, mappers, and adapters",
  "integration: API and service collaboration tests inside the FastAPI app boundary",
  "e2e: end-to-end workflow tests covering the full backend workbench flow",
]

[tool.coverage.run]
source = ["app", "tests"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
precision = 2
skip_empty = true
