[project]
name = "agent-atlas-runner-base"
version = "0.1.0"
description = "Shared runner bootstrap and launcher primitives for Agent Atlas runtimes."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<2.11",
  "agent-atlas-contracts",
]

[build-system]
requires = ["setuptools>=70.0,<71.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_atlas_runner_base = ["py.typed"]
