[project]
name = "agent-atlas-runner-langgraph"
version = "0.1.0"
description = "LangGraph/LangChain runtime adapter for Agent Atlas runners."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<2.11",
  "agent-atlas-contracts",
  "agent-atlas-runner-base",
  "langgraph>=0.2.60,<0.4",
  "langchain-core>=0.3.50,<0.4",
  "langchain-openai>=0.3.10,<0.4",
]

[build-system]
requires = ["setuptools>=70.0,<71.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_atlas_runner_langgraph = ["py.typed"]

[project.entry-points."agent_atlas.runtime_adapters"]
langgraph = "agent_atlas_runner_langgraph.runtime_plugins:build_runtime_adapter_plugin"
